Fixed compilation on Java 9